--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
 .kontak{
     color: #4A4A4A;
 }
+.sertifikasi{
+    color: #4A4A4A;
+}
 .tracking-perizinan-card .card{
     height: 353.48px;
     margin-bottom: 20px;
@@ -35,16 +38,28 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .kontak-card .card{
+    height: 150px;
     margin-bottom: 20px;
     background-color: rgba(255, 255, 255, 0.384);
     filter: blur(20);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: relative;
+    border: none;
 }
-.kontak-card .card-images{
-    position: absolute;
-    top: -30px;
-    align-items: center;
+.kontak img{
+    width: 150px;
+    height: 150px;
+    z-index: 100000;
+    margin-bottom: -10%;
+}
+.kontak .btn{
+    opacity: 55%;
+    filter: blur(20);
+    color: white;
+    font-weight: 700;
+}
+
+.navbar .btn {
+    width: 100px;
 }
 
 .content-scroll{
